<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/btnLifeCycle"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLifeCycleActivity"
            android:textStyle="bold" android:textColor="@color/btnColor"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtWelcome"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.705" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:freezesText="true"
            android:textSize="25sp" app:layout_constraintHorizontal_bias="0.533" android:onClick="luncherDiceRoller"/>
    <Button
            android:text="@string/btnCheckRadio"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCheckRadio"
            android:textStyle="bold" android:textColor="@color/btnColor"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtWelcome"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.951" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:freezesText="true"
            android:textSize="25sp" app:layout_constraintHorizontal_bias="0.533" android:onClick="luncherDiceRoller"/>
    <TextView
            android:layout_width="286dp"
            android:layout_height="57dp"
            android:text="@string/hello"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/txtWelcome" android:textStyle="bold"
            android:textSize="40sp" android:textColor="@color/colorAccent" android:onClick="toastMe"
            android:gravity="center_horizontal|center_vertical"/>
    <Button
            android:text="@string/count"
            android:layout_width="408dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCount"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0" android:textColor="@color/btnColor" android:textStyle="bold"
            android:textSize="25sp" android:onClick="countUp"/>
    <Button
            android:text="@string/mainBtnRoll"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRollActivity"
            android:textStyle="bold" android:textColor="@color/btnColor"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtWelcome"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.227" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:freezesText="true"
            android:textSize="25sp" app:layout_constraintHorizontal_bias="0.533" android:onClick="luncherDiceRoller"/>
    <Button
            android:text="@string/btnArithmeticActivity"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnArithmeticActivity"
            android:textStyle="bold" android:textColor="@color/btnColor"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtWelcome"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.462" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:freezesText="true"
            android:textSize="25sp" app:layout_constraintHorizontal_bias="0.533" android:onClick="luncherDiceRoller"/>
    <Button
            android:text="@string/login"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:textStyle="bold" android:textColor="@color/btnColor"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtWelcome"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:freezesText="true"
            android:textSize="25sp" app:layout_constraintHorizontal_bias="0.533"/>
    <TextView
            android:text="@string/countInitialValue"
            android:layout_width="276dp"
            android:layout_height="101dp"
            android:id="@+id/txtCount" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnCount" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="75sp" android:background="#FFEB3B"
            android:textColor="@color/colorAccent" android:gravity="center_horizontal|center_vertical"/>
</android.support.constraint.ConstraintLayout>