<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ArithmeticActivity">
    <TextView
            android:layout_width="202dp"
            android:layout_height="52dp"
            android:id="@+id/lblNum2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintVertical_bias="0.335" android:textSize="27sp"
            android:gravity="center_vertical" android:text="@string/txtSecondNumber" android:textStyle="bold"/>
    <TextView
            android:layout_width="202dp"
            android:layout_height="52dp"
            android:id="@+id/lblResult" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintVertical_bias="0.505" android:textSize="36sp"
            android:gravity="center_vertical" android:textStyle="bold" android:hint="Result"/>
    <TextView
            android:layout_width="202dp"
            android:layout_height="52dp"
            android:id="@+id/lblNum1" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintVertical_bias="0.226" android:textSize="27sp"
            android:gravity="center_vertical" android:text="@string/txtFirstNumber" android:textStyle="bold"/>
    <Button
            android:text="@string/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lblNum2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="304dp" android:layout_marginRight="304dp"
            app:layout_constraintVertical_bias="0.511" android:textSize="24sp" android:textStyle="bold"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSub" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lblNum2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="304dp" android:layout_marginRight="304dp"
            app:layout_constraintVertical_bias="0.511" android:textSize="24sp" android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btnAdd" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/btnMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMul" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lblNum2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="88dp" android:layout_marginRight="88dp"
            app:layout_constraintVertical_bias="0.511" android:textSize="24sp" android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btnSub" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDiv" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lblNum2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="88dp" android:layout_marginRight="88dp"
            app:layout_constraintVertical_bias="0.511" android:textSize="24sp" android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btnMul" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="153dp"
            android:layout_height="54dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNum1"
            app:layout_constraintStart_toEndOf="@+id/lblNum1" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.652" app:layout_constraintVertical_bias="0.219"
            android:textSize="27sp" android:textStyle="bold" android:autofillHints="" android:hint="@string/txtEnterNo"/>
    <EditText
            android:layout_width="153dp"
            android:layout_height="54dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNum2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintVertical_bias="0.325"
            android:textSize="27sp" android:textStyle="bold" app:layout_constraintStart_toEndOf="@+id/lblNum2"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:hint="@string/txtEnterNo"
            android:autofillHints=""/>
</android.support.constraint.ConstraintLayout>